tests/snapshots/render/iterm2@commonmark-spec-273-list_items.snap
---
source: tests/render.rs
assertion_line: 116
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/273-list_items.md
---
 1. 
    [32m╭──────────────────────────────────────────────────────────────────────────╮[0m
    [32m│ [0mindented code                                                           [32m │[0m
    [32m╰──────────────────────────────────────────────────────────────────────────╯[0m

    paragraph

    [32m╭──────────────────────────────────────────────────────────────────────────╮[0m
    [32m│ [0mmore code                                                               [32m │[0m
    [32m╰──────────────────────────────────────────────────────────────────────────╯[0m
