tests/snapshots/render/iterm2@commonmark-spec-289-list_items.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/289-list_items.md
snapshot_kind: text
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[33m1.  A paragraph[0m                                                             [32m │[0m
[32m│ [0m[33m    with two lines.[0m                                                         [32m │[0m
[32m│ [0m[33m[0m                                                                            [32m │[0m
[32m│ [0m[33m        indented code[0m                                                       [32m │[0m
[32m│ [0m[33m[0m                                                                            [32m │[0m
[32m│ [0m[33m    > A block quote.[0m                                                        [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
