tests/snapshots/render/iterm2@commonmark-spec-300-list_items.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/300-list_items.md
snapshot_kind: text
---
• [1m[34mFoo[0m
[1m[34m════════════════════════════════════════════════════════════════════════════════[0m

• [1m[34mBar[0m
[1m[34m────────────────────────────────────────────────────────────────────────────────[0m
  baz
